src/z80asm/z80asm2/t/05-cli/expected/at_files_05.txt
% z88dk-z80asm -v -dump-after-cmdline @t/05-cli//input/at_files_05.lst
t/05-cli/input/at_files_05.lst:4:3: error: File not found: file_not_found.asm
    		file_not_found.asm
    		^
t/05-cli/input/at_files_05.lst:5:5: error: File not found: file_not_found.lst
    	@ 	file_not_found.lst
    	  	^
verbose	1
ucase_labels	0
preprocess_only	0
swap_ix_iy	0
date_stamp	0
dump_after_cmdline	1
dump_after_tokenization	0
dump_after_directives	0
dump_after_macro_expansion	0
dump_after_preprocessing	0
m4_options	
perl_options	
cpp_options	
output_dir	
